--- a/index.html
+++ b/index.html
@@ -16,36 +16,42 @@
     <!-- <link href="assets/dist/css/bootstrap.min.css" rel="stylesheet" /> -->
     <!-- Custom styles for this template -->
     <link href="assets/dist/css/style.css" rel="stylesheet" />
+    <link href="assets/icon.png" rel="icon" />
   </head>
 
   <body>
-    <div class="background-section">
+    <video playsinline autoplay muted loop poster="polina.jpg" id="bgvid">
+      <source src="video.mp4" type="video/mp4" />
+    </video>
+    <div class="page-container">
       <div class="page-logo">
-        <img src="assets/brand/dbs-logo.png" />
+        <img src="assets/dbs-logo.png" />
       </div>
       <div class="page-main">
         <div class="text-area">
-          <h2>Welcome to</h2>
-          <h1>DBS Newton Green</h1>
-          <h4>
+          <div class="text-medium">Welcome to</div>
+          <div class="text-large">DBS Newton Green</div>
+          <div class="text-small">
             Take a walk through Singapore's first net zero office building by a
             bank
-          </h4>
-          <p class="explore">
-            <a href="#"
-              >EXPLORE
-              <script src="https://cdn.lordicon.com/xdjxvujz.js"></script>
-              <lord-icon
-                src="https://cdn.lordicon.com/iifryyua.json"
-                trigger="loop"
-                colors="primary:#ffffff"
-                scale="35"
-                style="width: 250px; height: 250px"
-              >
-              </lord-icon>
-            </a>
-          </p>
+          </div>
         </div>
+      </div>
+      <div class="page-explore">
+        <p class="explore">
+          <a href="#"
+            >EXPLORE
+            <script src="https://cdn.lordicon.com/xdjxvujz.js"></script>
+            <lord-icon
+              src="https://cdn.lordicon.com/iifryyua.json"
+              trigger="loop"
+              colors="primary:#ffffff"
+              scale="35"
+              style="width: 250px; height: 250px"
+            >
+            </lord-icon>
+          </a>
+        </p>
       </div>
     </div>
   </body>
